<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/empty_list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/fab_add_repo">
    <ImageView
        android:id="@+id/empty_list_image_view"
        android:contentDescription="@string/empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dim_150dp"
        android:minHeight="@dimen/dim_150dp"
        android:src="@drawable/ic_baseline_folder_copy_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </ImageView>
    <TextView
        android:id="@+id/empty_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_your_favourite_github_repo_here"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_16sp"
        android:fontFamily="serif"
        android:padding="@dimen/dim_5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empty_list_image_view">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/repo_list_recyclerview"></include>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/dim_15dp"
        android:layout_margin="@dimen/dim_10dp"
        app:fabSize="normal"
        android:src="@drawable/ic_baseline_add_24"
        android:elevation="@dimen/dim_15dp"
        android:contentDescription="@string/add_git_repo"
        android:backgroundTint="@color/saturated_blue">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.constraintlayout.widget.ConstraintLayout>